--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
        			<div class="row">
           			<div class="col-md-6 col-sm-6">
             			<div class="info-left">
-              			<img class="cimage" src="assets/images/capstone.png">
+              			<img class="cimage" src="assets/images/capstone1.jpg">
             			</div>
           			</div>
           			<div class="col-md-6 col-sm-6">
             			<div class="info-right">
-              				<h2><a class="black" href="#">Marvelous Capstone</a></h2>
-              				<p>This Capstone open the world to me in front-end delopment, showcasing my amazing skills on HTML5, CSS3, and Bootstrap 4. This project is something you've never seen before. Be prepare to be amazed!!!</p>
+              				<h2><a class="black" href="https://jpeternantonio.github.io/techreview-jpa/" target="_blank">TechReview</a></h2>
+              				<p>This Tech Website will guide you in looking for latest technology in Phones, Tablets, and Laptops. We look after the latest tehcnology and guide you in decision-making and awareness. Showcasing latest web designs, will hook you in this website.</p>
             			</div>
           			</div>
         		</div>
