--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           			</div>
           			<div class="col-md-6 col-sm-6">
             			<div class="info-right">
-              				<h2><a class="black" href="https://jpeternantonio.github.io/techreview-jpa/" target="_blank">TechReview</a></h2>
+              				<h2><a class="black" href=" https://jpeternantonio.github.io/tech-review-jpa/" target="_blank">TechReview</a></h2>
               				<p>This Tech Website will guide you in looking for latest technology in Phones, Tablets, and Laptops. We look after the latest tehcnology and guide you in decision-making and awareness. Showcasing latest web designs, will hook you in this website.</p>
             			</div>
           			</div>
