--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
     <script>
-        window.sr = ScrollReveal({ reset: true }); 
+        window.sr = ScrollReveal(); 
         sr.reveal('.navbar', {
           duration: 2000,
           origin:'bottom'
